# trade-simulator

./: CMakeLists.txt  README.md  dummy.txt
include/: L2Snapshot.h  almgrenChrissModel.h  almgrenEstimator.h  featureExtractor.h  labelOrderbook.h  latencyTracker.h  logisticRegressor.h  mainwindow.h  makerTakerLabel.h  slippageRegressor.h  snapshotHandler.h  trainLogistic.h  trainSlippageModel.h  webSocketClient.h
models/: almgrenChrissModel.cpp  logisticRegressor.cpp  slippageRegressor.cpp
src/: main.cpp
ui/: mainwindow.cpp
utils/: almgrenEstimator.cpp  featureExtractor.cpp  labelOrderbook.cpp  makerTakerLabel.cpp  snapshotHandler.cpp  tradeInput.cpp  tradeOutput.cpp  trainLogistic.cpp  trainSlippageModel.cpp
websocket/: clientForData.cpp  webSocketClient.cpp
